--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "^11.9",
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
-        "maatwebsite/excel": "^1.1"
+        "phpoffice/phpspreadsheet": "^2.2",
+        "psr/simple-cache": "1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
