--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
-        "phpoffice/phpspreadsheet": "^2.2",
+        "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "1.0"
     },
     "require-dev": {
